# utah-research-matcher

./: .env.example  .gitignore  AGENTS.md  PIPELINE_CONTRACTS.md  README.md  TEAM_PLAN.md  app.py  index.html  requirements.txt  vercel.json
.github/workflows/: weekly-research-sync.yml
api/: index.py
apps/api/: alembic.ini  main.py  pyproject.toml  railway.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: company.py  diagnostics.py  staff.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: company_query.py  paper.py  staff.py
apps/api/app/schemas/: company.py  diagnostics.py  match.py  paper.py  staff.py
apps/api/app/services/: company_interpreter.py  embedding_service.py  llm_client.py  openalex_service.py  rerank_service.py  retrieval_service.py  staff_service.py
apps/web/: next-env.d.ts  package-lock.json  (+2 more)
data/: demo_results.json  demo_student.json  faculty_browser.json  fallback_db.json
docs/: deployment-checklist.md  replatform-architecture.md
evals/: match_eval_cases.json
form/: index.html
frontend/: app.js  form.html  form.js  home.js  index.html  results.html  shared.js  styles.css
infra/: docker-compose.yml
pipeline/: __init__.py  build_browser_payload.py  critic.py  emailer.py  evaluate_matches.py  faculty_data.py  normalizer.py  openai_client.py  orchestrator.py  ranker.py  rationale.py  vagueness.py
results/: index.html
scraper/: scraper.py
workers/: __init__.py
(+52 files in other folders)
